fixed overflow of number

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   color: #002b5b;
   width: 80%;
   margin: auto;
+  cursor: pointer;
 }
 
 /* table */
@@ -85,6 +86,7 @@ table {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   font-family: "Oswald", sans-serif;
+  overflow-x: auto;
 }
 
 footer {
